--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,3 +6,6 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
 
 
+upload:
+  localPath: E:/Work project/web/upload/
+  accessPath: /upload/
